--- a/_config.yml
+++ b/_config.yml
@@ -66,9 +66,9 @@ author:
    # - label: "Twitter"
     #  icon: "fab fa-fw fa-twitter-square"
      # url: "https://twitter.com/"
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-      url: "https://github.com/llbeirut"
+   # - label: "GitHub"
+    #  icon: "fab fa-fw fa-github"
+    #  url: "https://github.com/llbeirut"
    # - label: "Instagram"
     #  icon: "fab fa-fw fa-instagram"
      # url: "https://instagram.com/"
