--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: LLB
-email:
+email: llbeirut9@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Linguistic Landscapes of Beirut (LLB) is a multilingual spatial humanities project about language in the city
 twitter_username: username
-github_username: username
-minimal_mistakes_skin: default
+github_username: llbeirut
+minimal_mistakes_skin: dark
 search: true
 
 # Build settings
@@ -66,9 +66,9 @@ author:
    # - label: "Twitter"
     #  icon: "fab fa-fw fa-twitter-square"
      # url: "https://twitter.com/"
-   # - label: "GitHub"
-    #  icon: "fab fa-fw fa-github"
-    #  url: "https://github.com/llbeirut"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/llbeirut"
    # - label: "Instagram"
     #  icon: "fab fa-fw fa-instagram"
      # url: "https://instagram.com/"
