--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,12 @@
 main:
-  - title: "About"
+  - title: "Home"
     url: /about/
   - title: "Maps"
     url: /maps/
   - title: "Posts"
-    url: /posts/
+    url: /publications/
+  - title: "Team"
+    url: /team/ 
   - title: "Categories"
     url: /categories/
   - title: "Tags"
