--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,7 @@ remote_theme: mmistakes/minimal-mistakes
 permalink: /:categories/:title/
 paginate: 7 # amount of posts to show
 paginate_path: /page:num/
-timezone: +04
-# https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone: +04  # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 include:
   - _pages
@@ -59,7 +58,7 @@ plugins:
 author:
   name   : "Linguistic Landscapes of Beirut"
   avatar : "/assets/images/llb.png"
-  bio    : "A multilingual spatial humanities project about language in the city"
+  bio    : "A multilingual spatial humanities project about language in the city."
   links:
    # - label: "Website"
     #  icon: "fas fa-fw fa-link"
@@ -76,9 +75,9 @@ author:
 
 footer:
   links:
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
+   # - label: "Twitter"
+    #  icon: "fab fa-fw fa-twitter-square"
+     # url: "https://twitter.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/"
