--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ twitter_username: username
 github_username: llbeirut
 minimal_mistakes_skin: dark
 search: true
+baseurl: /about 
 
 # Build settings
 markdown: kramdown
@@ -80,7 +81,7 @@ footer:
      # url: "https://twitter.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/"
+      url: "https://github.com/llbeirut"
    # - label: "Instagram"
     #  icon: "fab fa-fw fa-instagram"
      # url: "https://instagram.com/"
