--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: LLB
 email: llbeirut9@gmail.com
+baseurl: https://llbeirut.github.io/about/
 description: >- # this means to ignore newlines until "baseurl:"
   Linguistic Landscapes of Beirut (LLB) is a multilingual spatial humanities project about language in the city
 twitter_username: username
