--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Linguistic Landscapes of Beirut (LLB) is a multilingual spatial humanities project about language in the city
 twitter_username: username
 github_username: llbeirut
-minimal_mistakes_skin: dark
+minimal_mistakes_skin: neon
 search: true
 
 # Build settings
@@ -30,7 +30,7 @@ permalink: /:categories/:title/
 paginate: 7 # amount of posts to show
 paginate_path: /page:num/
 timezone: +04  # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-
+teaser: /assets/images/heart.png
 include:
   - _pages
 
